[gd_scene load_steps=9 format=3 uid="uid://b63a1uoxvwunr"]

[ext_resource type="StyleBox" uid="uid://cx6fkhog11f3g" path="res://Resources/themes/roundedRect.tres" id="1_hbsjt"]
[ext_resource type="Script" path="res://Scripts/Dialogs/password_dialog.gd" id="2_mwev6"]
[ext_resource type="StyleBox" uid="uid://box0many71a4o" path="res://Resources/themes/dialogTitleBackground.tres" id="3_cs5ri"]
[ext_resource type="SystemFont" uid="uid://djnjdmtaghwta" path="res://Resources/themes/dialogTitle.tres" id="4_drwfr"]
[ext_resource type="SystemFont" uid="uid://b3xyn2xlnfoht" path="res://Resources/themes/dialogText.tres" id="5_m2x51"]
[ext_resource type="Texture2D" uid="uid://d1fyvq5kerbnb" path="res://Resources/themes/close_gadet.tres" id="6_0pf73"]
[ext_resource type="StyleBox" uid="uid://dkq4ayhfvqbvw" path="res://Resources/themes/dialog_text_edit.tres" id="7_lh6oc"]
[ext_resource type="StyleBox" uid="uid://0opjcsxbgju8" path="res://Resources/themes/dialog_text_edit_normal.tres" id="8_gxdvx"]

[node name="password_dialog" type="Panel"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -55.0
offset_right = 92.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = ExtResource("1_hbsjt")
script = ExtResource("2_mwev6")
metadata/_edit_lock_ = true

[node name="dialogtitleBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 19.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("3_cs5ri")
metadata/_edit_lock_ = true

[node name="dialogTitle" type="Label" parent="dialogtitleBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_right = -67.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_drwfr")
text = "Enter Password"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="dialogCloseGadget" type="Button" parent="dialogtitleBackground"]
layout_mode = 0
offset_left = 166.0
offset_top = 1.0
offset_right = 574.0
offset_bottom = 409.0
scale = Vector2(0.035, 0.035)
focus_mode = 0
theme_override_icons/icon = ExtResource("6_0pf73")
shortcut_feedback = false
shortcut_in_tooltip = false
flat = true
metadata/_edit_lock_ = true

[node name="cancelButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = 25.0
offset_right = 87.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../password_field")
theme_override_fonts/font = ExtResource("5_m2x51")
text = "Cancel"
metadata/_edit_lock_ = true

[node name="password_field" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -19.5
offset_right = 88.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../cancelButton")
theme_override_styles/focus = ExtResource("7_lh6oc")
theme_override_styles/normal = ExtResource("8_gxdvx")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
secret = true
metadata/_edit_lock_ = true

[node name="clearButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -181.0
offset_top = 25.0
offset_right = -101.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 2
focus_next = NodePath("../password_field")
theme_override_fonts/font = ExtResource("5_m2x51")
text = "Clear"
metadata/_edit_lock_ = true

[connection signal="pressed" from="dialogtitleBackground/dialogCloseGadget" to="." method="dialog_cancelled"]
[connection signal="pressed" from="cancelButton" to="." method="dialog_cancelled"]
[connection signal="text_changed" from="password_field" to="." method="_on_password_field_text_changed"]
[connection signal="text_submitted" from="password_field" to="." method="_on_password_field_text_submitted"]
[connection signal="pressed" from="clearButton" to="." method="_on_clear_button_pressed"]
